# ipython-oidc-client

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  example.ipynb  pyproject.toml
ipython_oidc_client/: __init__.py
ipython_oidc_client/client/: main.js
ipython_oidc_client/server/: __init__.py
ipython_oidc_client/server/static/: redirect.html
