[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ipython_oidc_client"
author = "Jorge C. Leitao"
description-file = "README.md"
author-email = "jorgecarleitao@gmail.com"
home-page = "https://github.com/jorgecarleitao/ipython-oidc-client"
classifiers = ["License :: OSI Approved :: MIT License"]
